# asta-resource-repo

./: .dockerignore  .flake8  .gitignore  BEADS.md  CLAUDE.md  Dockerfile  INSTALL.md  MCP_SETUP.md  Makefile  README.md  README_CHATBOT.md  docker-compose.yaml  install.sh  pyproject.toml
.agents/skills/asta-documents/: SKILL.md
.beads/: issues.jsonl
.claude/commands/: update-progress.md
.github/workflows/: ci.yml  publish.yml
a2a-poc/: .gitignore  CLAUDE.md  README.md  pyproject.toml
a2a-poc/examples/: filesystem_storage_example.py  run_handler.py  run_subagent.py  test_client.py
a2a-poc/src/a2a_poc/: __init__.py  handler.py  storage.py  subagent.py
a2a-poc/tests/: __init__.py  test_agent.py  test_storage.py  test_subagent.py
instructions/: Progress.md  Roadmap.md
migrations/: 001_initial_schema.sql  002_add_users_table.sql
skills/: README.md
skills/asta-documents/: SKILL.md
src/asta/: __init__.py
src/asta/resources/: __init__.py  auth.py  exceptions.py  mcp_server.py  mcp_tools.py  model.py  rest_api.py  server.py
src/asta/resources/cli/: __init__.py  chatbot.py  index_cli.py
src/asta/resources/config/: __init__.py  local.conf
src/asta/resources/document_store/: __init__.py  base.py  bm25_ranker.py  embeddings.py  hybrid_search.py  local_index.py  postgres.py  schema.sql  search_cache.py
src/asta/resources/utils/: __init__.py  git_namespace.py  path_utils.py  short_id.py
tests/: README.md  test_bm25.py  test_docker_integration.py  test_fetch.py  test_git_namespace.py  test_local_index_store.py  test_path_utils.py  test_postgres_integration.py  test_rest_api.py  test_search_cache.py  test_server_integration.py  test_short_id.py
