[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "asta-resource-repository"
version = "0.1.0"
description = "MCP server for Asta resource management"
authors = [{name = "Asta Resource Repository Team"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp~=2.12",
    "pydantic~=2.11",
    "pyhocon~=0.3",
    "anthropic~=0.39",
    "mcp~=1.2",
    "pyyaml~=6.0",
]

[project.optional-dependencies]
dev = [
    "black~=25.9",
    "flake8~=7.3",
    "pytest~=8.0",
    "pytest-asyncio~=0.24",
    "httpx~=0.28",
    "requests~=2.32",
    "mcp[cli]~=1.15",
]
chatbot = [
    "anthropic~=0.39",
    "mcp~=1.2",
]

[project.scripts]
asta-index = "asta.resources.cli.index_cli:main"
asta-resources-mcp = "asta.resources.mcp_server:main"
asta-resources-chatbot = "asta.resources.cli.chatbot:main"

[project.urls]
Homepage = "https://github.com/example/asta-resource-repository"
Repository = "https://github.com/example/asta-resource-repository"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.package-data]
"asta.resources.config" = ["*.conf"]