[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "asta-resource-repository"
version = "0.1.0"
description = "Lightweight document metadata index with CLI and skill support"
authors = [{name = "Asta Resource Repository Team"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic~=2.11",
    "pyhocon~=0.3",
    "pyyaml~=6.0",
    "sentence-transformers>=2.2.0",
    "numpy>=1.21.0",
]

[project.optional-dependencies]
dev = [
    "black~=25.9",
    "flake8~=7.3",
    "pytest~=8.0",
    "pytest-asyncio~=0.24",
    "httpx~=0.28",
    "requests~=2.32",
]

[project.scripts]
asta-documents = "asta.resources.cli.index_cli:main"

[project.urls]
Homepage = "https://github.com/allenai/asta-resource-repo"
Repository = "https://github.com/allenai/asta-resource-repo"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.package-data]
"asta.resources.config" = ["*.conf"]
"asta.resources.document_store" = ["*.sql"]